--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "element-ui": "^2.15.1",
     "ethereumjs-util": "^7.1.2",
     "up-core-test": "^0.1.6",
-    "up-rangers": "^0.1.1",
+    "up-rangers": "../../unipass-v3/up-rangers",
     "v-clipboard": "^2.2.3"
   },
   "devDependencies": {
