--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # demo-d.app.unipass.id
 
-# UNIPASS_URL=unipass-l3-dist.vercel.app
-UNIPASS_URL=t.app.unipass.id
+UNIPASS_URL=unipass-l3-git-test-lay2.vercel.app
 
 RANGERS_UNIPASS_CONTRACT=0xDC4fB8f12487B721F86F5595AC813Dc95ef0f54F
