--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "3.0.0",
   "private": true,
   "scripts": {
-    "start": "nuxt -open",
-    "build": "nuxt generate",
+    "start": "NODE_ENV=dev sh bin/start.sh",
+    "build": "sh bin/build.sh",
     "preview": "nuxt start",
     "vercel": "cd dist&&vercel",
     "lint": "eslint --fix --ext \".js,.vue\" --ignore-path .gitignore ."
